# rest-example-rs

./: Cargo.toml  README.md
client/: Cargo.toml  README.md
client/src/: main.rs
server/: Cargo.toml  README.md
server/src/: main.rs
src/: main.rs
