[package]
name = "rest-example-rs"
version = "0.1.0"
authors = ["Nyiro Gergo <gergo.nyiro@gmail.com>"]

[dependencies]
rocket = "0.3.6"
rocket_codegen = "0.3.6"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
lazy_static = "1.1.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]
